--- a/application.properties
+++ b/application.properties
@@ -19,3 +19,5 @@ management.endpoints.web.exposure.include=*
 qrcode.filepath=/u01/eirsapp/PlatformComponent/
 notificationattachment.filepath=/u01/eirsapp/PlatformComponent/
 attachmentCopyServerName=142.93.212.242
+
+common_storage_flag=true
