--- a/application.properties
+++ b/application.properties
@@ -16,7 +16,7 @@ spring.jpa.open-in-view=false
 spring.jpa.properties.javax.persistence.validation.mode=none
 management.endpoints.web.exposure.include=*
 
-qrcode.filepath=/u01/eirsapp/PlatformComponent/
+#qrcode.filepath=/u01/eirsapp/PlatformComponent/
 notificationattachment.filepath=/u01/eirsapp/PlatformComponent/
 attachmentCopyServerName=142.93.212.242
 
